--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "pusher/pusher-php-server": "^7.2",
+        "sawastacks/kropify-laravel": "^2.0",
         "stichoza/google-translate-php": "^5.2"
     },
     "require-dev": {
